...
                    ViewRoutes.MusicList -> {
                        FloatingActionButton(onClick = {
                            navController.navigate(ViewRoutes.AddPlayList.name)
                        }) {
                            Icon(
                                imageVector = ImageVector.vectorResource(id = R.drawable.playlist_add_48),
                                contentDescription = "AddToPlaylist"
                            )
                        }
                    }
                    ViewRoutes.CurrentPlayList -> {
                        FloatingActionButton(onClick = {
                            removeMusic = true
                        }) {
                            Icon(
                                imageVector = ImageVector.vectorResource(id = R.drawable.remove_48),
                                contentDescription = "RemoveFromPlaylist"
                            )
                        }
                    }
                    else -> {}
                }
            }
...
